--- a/src/app/pages/user-information/user-information.page.html
+++ b/src/app/pages/user-information/user-information.page.html
@@ -1,59 +1,78 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Editar Usuario</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="saveChanges()">Guardar</ion-button>
-    </ion-buttons>
+    <ion-title>Informacion de usuario</ion-title>
+      <ion-buttons slot="end">
+        <ion-button (click)="saveChanges()">Guardar</ion-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <form [formGroup]="userDataForm">
+    <!-- Nombre -->
     <ion-item lines="none">
-      <ion-label position="floating">Nombre</ion-label>
+      <ion-label position="fixed">Nombre</ion-label>
       <ion-input type="text" formControlName="name"></ion-input>
+      <div *ngIf="userDataForm.controls['name'].invalid && userDataForm.controls['name'].touched">
+        <ion-text color="danger" *ngIf="userDataForm.controls['name'].errors?.['required']">El nombre es obligatorio.</ion-text>
+      </div>
     </ion-item>
-
+  
+    <!-- Teléfono -->
     <ion-item lines="none">
-      <ion-label position="floating">direccion</ion-label>
-      <ion-input type="text" formControlName="address"></ion-input>
-    </ion-item>
-
-    <ion-item lines="none">
-      <ion-label position="floating">Teléfono</ion-label>
+      <ion-label position="fixed">Teléfono</ion-label>
       <ion-input type="text" formControlName="phoneNumber"></ion-input>
+      <div *ngIf="userDataForm.controls['phoneNumber'].invalid && userDataForm.controls['phoneNumber'].touched">
+        <ion-text color="danger" *ngIf="userDataForm.controls['phoneNumber'].errors?.['required']">El teléfono es obligatorio.</ion-text>
+        <ion-text color="danger" *ngIf="userDataForm.controls['phoneNumber'].errors?.['pattern']">Número de teléfono inválido.</ion-text>
+      </div>
     </ion-item>
-
-    <ion-item class="text-label"  lines="none">
-      <ion-checkbox
-        formControlName="isDriver">Eres conductor
-      </ion-checkbox>
-    </ion-item>
-
-    <div *ngIf="userDataForm.controls['isDriver'].value">
+  
+    <!-- Dirección -->
+    <div formGroupName="address">
       <ion-item lines="none">
-        <ion-label position="floating">Marca de tu vehiculo</ion-label>
-        <ion-input type="text" formControlName="brand"></ion-input>
+        <ion-label position="fixed">Ciudad</ion-label>
+        <ion-input type="text" formControlName="city"></ion-input>
       </ion-item>
       <ion-item lines="none">
-        <ion-label position="floating">Modelo de tu vehiculo</ion-label>
-        <ion-input type="text" formControlName="model"></ion-input>
+        <ion-label position="fixed">Colonia</ion-label>
+        <ion-input type="text" formControlName="neighborhood"></ion-input>
       </ion-item>
       <ion-item lines="none">
-        <ion-label position="floating">Año de tu vehiculo</ion-label>
-        <ion-input type="text" formControlName="year"></ion-input>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label autocapitalize="characters" position="floating">Placas vehiculares</ion-label>
-        <ion-input type="text" formControlName="licensePlates"></ion-input>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label position="floating">Numero de licencia de conducir</ion-label>
-        <ion-input type="text" formControlName="driverLicense"></ion-input>
+        <ion-label position="fixed">Calle</ion-label>
+        <ion-input type="text" formControlName="street"></ion-input>
       </ion-item>
     </div>
-
-    <!-- Agrega más campos según sea necesario -->
-
+  
+    <!-- Checkbox de conductor -->
+    <div [formGroup]="userDataForm" formGroupName="driver">
+      <ion-item>
+        <ion-label>¿Eres conductor?</ion-label>
+        <ion-checkbox formControlName="isDriver"></ion-checkbox>
+      </ion-item>
+    
+      <div *ngIf="userDataForm.get('driver.isDriver')?.value" formGroupName="vehicle">
+        <ion-item lines="none">
+          <ion-label position="fixed">Marca de tu vehiculo</ion-label>
+          <ion-input type="text" formControlName="brand"></ion-input>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label position="fixed">Modelo de tu vehiculo</ion-label>
+          <ion-input type="text" formControlName="model"></ion-input>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label position="fixed">Año de tu vehiculo</ion-label>
+          <ion-input type="text" formControlName="year"></ion-input>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label position="fixed">Placas vehiculares</ion-label>
+          <ion-input type="text" formControlName="licensePlates"></ion-input>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-label position="fixed">Número de licencia de conducir</ion-label>
+          <ion-input type="text" formControlName="driverLicense"></ion-input>
+        </ion-item>
+      </div>
+    </div>
   </form>
 </ion-content>
