--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -1,14 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>account</ion-title>
+    <ion-title>Account</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">account</ion-title>
+      <ion-title size="large">Account</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-button (click)="logout()">Cerrar sesion</ion-button>
+  Aqui podria cerrar la cuenta o algo asi 
 </ion-content>
