--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,14 +1,36 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-menu type="push" side="end" contentId="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">home</ion-title>
+      <ion-title>Cuenta</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-button (click)="goToUserInfo()">user info</ion-button>
-</ion-content>
+  <ion-content class="ion-padding"> <!-- Menu -->
+    <ion-list>
+      <ion-item (click)="goToUserInfo()">
+        <ion-label>Mis Datos de viaje</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Mi cuenta</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Mis viajes (yo se que no lo voy a hacer)</ion-label>
+      </ion-item>
+      <ion-item (click)="logout()">
+        <ion-label>Cerrar sesion</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Rutas Ahora</ion-title>
+      <ion-buttons slot="end">
+        <ion-menu-button>
+          <ion-icon  src="../../../assets/icon/person-sharp.svg"></ion-icon>
+        </ion-menu-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
+</div>
