--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -10,5 +10,5 @@
       <ion-title size="large">Account</ion-title>
     </ion-toolbar>
   </ion-header>
-  Aqui podria cerrar la cuenta o algo asi 
+  <ion-button (click)="deleteAccount()" color="danger">Eliminar cuenta</ion-button>
 </ion-content>
