--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,16 +6,16 @@
   </ion-header>
   <ion-content class="ion-padding"> <!-- Menu -->
     <ion-list>
-      <ion-item (click)="goToUserInfo()">
+      <ion-item button (click)="goToUserInfo()">
         <ion-label>Mis Datos de viaje</ion-label>
       </ion-item>
-      <ion-item>
+      <ion-item button (click)="goToAccount()">
         <ion-label>Mi cuenta</ion-label>
       </ion-item>
       <ion-item>
         <ion-label>Mis viajes (yo se que no lo voy a hacer)</ion-label>
       </ion-item>
-      <ion-item (click)="logout()">
+      <ion-item button (click)="logout()">
         <ion-label>Cerrar sesion</ion-label>
       </ion-item>
     </ion-list>
@@ -27,10 +27,12 @@
       <ion-title>Rutas Ahora</ion-title>
       <ion-buttons slot="end">
         <ion-menu-button>
-          <ion-icon  src="../../../assets/icon/person-sharp.svg"></ion-icon>
+          <ion-icon name="person-sharp"></ion-icon>
         </ion-menu-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
+  <ion-content class="ion-padding">
+    <ion-button>Añadir<ion-icon name="add-circle"></ion-icon></ion-button>
+  </ion-content>
 </div>
