--- a/src/app/pages/user-information/user-information.page.html
+++ b/src/app/pages/user-information/user-information.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Informacion de usuario</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
       <ion-buttons slot="end">
         <ion-button (click)="saveChanges()">Guardar</ion-button>
       </ion-buttons>
