--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -33,6 +33,7 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-button>Añadir<ion-icon name="add-circle"></ion-icon></ion-button>
+    <ion-button (click)="goToGenereteRoute()">Añadir<ion-icon name="add-circle"></ion-icon></ion-button>
+    <app-show-route-map></app-show-route-map>
   </ion-content>
 </div>
