--- a/src/app/components/show-route-map/show-route-map.component.html
+++ b/src/app/components/show-route-map/show-route-map.component.html
@@ -1,1 +1,8 @@
-<div #mapElement id="map"></div>
+<ng-container *ngFor="let route of routes; let i = index">
+    <div>
+        <ion-text>Hora de salida: {{ formattedDepartureTimes[i] }}</ion-text>
+        <div #mapElement style="height: 400px; width: 100%; margin-bottom: 20px;"></div>
+        <ion-button>Ofertar</ion-button>
+    </div>
+</ng-container>
+  
