--- a/src/app/components/show-route-map/show-route-map.component.scss
+++ b/src/app/components/show-route-map/show-route-map.component.scss
@@ -2,3 +2,9 @@
     height: 70vh;
     width: 100%;
   }
+
+div[ng-reflect-ng-for] {
+    height: 400px;
+    width: 100%;
+    margin-bottom: 20px;
+}
