--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -33,7 +33,9 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-button (click)="goToGenereteRoute()">Añadir<ion-icon name="add-circle"></ion-icon></ion-button>
-    <app-show-route-map></app-show-route-map>
+    <ion-button (click)="goToGenereteRoute()">Publica una ruta<ion-icon name="add-circle"></ion-icon></ion-button>
+    <div>
+      <app-show-route-map></app-show-route-map>
+    </div>
   </ion-content>
 </div>
