--- a/src/app/components/show-route-map/show-route-map.component.html
+++ b/src/app/components/show-route-map/show-route-map.component.html
@@ -2,7 +2,6 @@
     <div>
         <ion-text>Hora de salida: {{ formattedDepartureTimes[i] }}</ion-text>
         <div #mapElement style="height: 400px; width: 100%; margin-bottom: 20px;"></div>
-        <ion-button>Ofertar</ion-button>
+        <ion-button (click)="goToOffer(route._id)">Ofertar al conductor</ion-button>
     </div>
 </ng-container>
-  
