--- a/src/app/components/show-route-map/show-route-map.component.scss
+++ b/src/app/components/show-route-map/show-route-map.component.scss
@@ -1,10 +1,41 @@
+#rute-data{
+  margin: 2vh 0 2vh 0;
+}
+
 #map {
-    height: 70vh;
-    width: 100%;
-  }
+    height: 50vh;
+    width: 90vw;
+    margin-bottom: 2vh;
+}
 
 div[ng-reflect-ng-for] {
     height: 400px;
     width: 100%;
     margin-bottom: 20px;
+}
+
+#offer-button{
+  --background: #112122;
+  --background-hover: #112122;
+
+  --color: #FFFFD2;
+  --border-style: solid;
+  --border-width: 1px;
+
+  --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+  --background-activated: none;
+  --background-focused: none;
+  --background-hover: none;
+  --background-activated-opacity: none;
+  --background-focused-opacity: none;
+  --background-hover-opacity: none;
+
+
+  --padding-top: 10px;
+  --padding-bottom: 10px;
+
+  --border: 1px solid  transparent;
+  --border-radius: 10px;
+  font-weight: bolder;
+  font-size: 120%;
 }
