no routes message, send offer complete

--- a/src/app/components/show-route-map/show-route-map.component.html
+++ b/src/app/components/show-route-map/show-route-map.component.html
@@ -5,3 +5,6 @@
         <ion-button id="offer-button"(click)="goToOffer(route._id)">Ofertar</ion-button>
     </div>
 </ng-container>
+<div id="no-routes-message" *ngIf="noRoutes == true">
+    <ion-text>Actualmente no hay nadie ofreciendo un viaje :'c</ion-text>
+</div>
