--- a/src/app/components/show-route-map/show-route-map.component.scss
+++ b/src/app/components/show-route-map/show-route-map.component.scss
@@ -8,6 +8,12 @@
     margin-bottom: 2vh;
 }
 
+#no-routes-message{
+  margin-top: 10vh;
+  font-size: 120%;
+  text-align: center;
+}
+
 div[ng-reflect-ng-for] {
     height: 400px;
     width: 100%;
