--- a/src/app/pages/offer/offer.page.html
+++ b/src/app/pages/offer/offer.page.html
@@ -18,13 +18,11 @@
     <app-add-route-map (locationSelected)="onLocationSelected($event)"></app-add-route-map>
     <div class="price">
     <form [formGroup]="priceForm">
-      <ion-item lines="none">
-        <ion-label position="fixed">Precio</ion-label>
+        <ion-label position="fixed">Oferta $</ion-label>
         <ion-input ngDefaultControl type="number" formControlName="price"></ion-input>
-        <div *ngIf="priceForm.controls['price'].invalid && priceForm.controls['price'].touched">
-          <ion-text color="danger" *ngIf="priceForm.controls['price'].errors?.['required']">El nombre es obligatorio.</ion-text>
-        </div>
-      </ion-item>
+        <ion-text *ngIf="noAddress === true">Asegurate de seleccionar una ruta en en mapa</ion-text>
+        <ion-text *ngIf="noPrice === true">Selecciona un precio si quieres que sea gratis puedes seleccionar 0</ion-text>
+        <ion-button (click)="sendOffer()">Enviar oferta</ion-button>
     </form>
   </div>
   </div>
