--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,6 +12,9 @@
       <ion-item button (click)="goToAccount()">
         <ion-label>Mi cuenta</ion-label>
       </ion-item>
+      <ion-item button (click)="goTocheckOffers()">
+        <ion-label>Ofertas</ion-label>
+      </ion-item>
       <ion-item>
         <ion-label>Mis viajes (yo se que no lo voy a hacer)</ion-label>
       </ion-item>
