--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -50,7 +50,9 @@ ion-input.custom {
     --placeholder-color: #112122;
     --placeholder-font-weight: bolder;
     --placeholder-opacity: 0.3;
-  
+    --highlight-color-focused: none;
+    --highlight-color-invalid: none;
+    --highlight-color-valid: none;
     --padding-bottom: 10px;
     --padding-end: 10px;
     --padding-start: 10px;
