--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -13,7 +13,7 @@
         <ion-label>Mi cuenta</ion-label>
       </ion-item>
       <ion-item button (click)="goTocheckOffers()">
-        <ion-label>Ofertas</ion-label>
+        <ion-label>Viajes y ofertas</ion-label>
       </ion-item>
       <ion-item>
         <ion-label>Mis viajes (yo se que no lo voy a hacer)</ion-label>
